# blackletter

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml  tests.yml
blackletter/: __init__.py  __main__.py  analyze.py  api.py  cli.py  config.py  margins.py  models.py  ocr.py  process.py  refine.py  scanner.py  tasks.py  validate.py
blackletter/core/: advance_sheet.py  extractor.py  planner.py  redactor.py  scanner.py
blackletter/prompts/: advance_sheet.txt
blackletter/utils/: __init__.py  filtering.py  header.py  image.py  processing.py  text.py
tests/: test_delete_headnote_pages.py  test_ensure_weights.py  test_imports.py  test_lazy_imports.py  test_models.py  test_outside_opinion_rects.py  test_pairing_a3d_217.py  test_redactions_mj85.py  test_tighten_to_text.py
tests/fixtures/: a3d_217_detections.json  a3d_217_pairing_dets.json  a3d_detections.json
