[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackletter"
version = "0.0.1"
description = "Remove copyrighted material from legal case law PDFs"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-2-Clause"
authors = [
    {name = "Your Name", email = "bill@free.law"}
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
blackletter = "blackletter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blackletter*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"